--- a/officialpages/index.html
+++ b/officialpages/index.html
@@ -150,7 +150,7 @@
     <header>
       <nav class="navbar fixed-top">
         <a class="navbar-brand" href="index.html">
-          <img src="./pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+          <img src="safespace/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/index.html"><i class="fas fa-home"></i></a>
