--- a/officialpages/index.html
+++ b/officialpages/index.html
@@ -6,7 +6,7 @@
     <title>Safe Space - Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="icon" href="pictures/icon.PNG">
+    <link rel="icon" href="../pictures/icon.PNG">
     <style>
       body, html {
         margin: 0;
