--- a/officialpages/index.html
+++ b/officialpages/index.html
@@ -150,7 +150,7 @@
     <header>
       <nav class="navbar fixed-top">
         <a class="navbar-brand" href="index.html">
-          <img src="../pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+          <img src="../pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.PNG" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/index.html"><i class="fas fa-home"></i></a>
@@ -187,7 +187,7 @@
         <section>
           <div class="row feature align-items-center">
             <div class="col-md-6">
-              <img src="/pictures/friends.jpg" alt="Your Digital Support">
+              <img src="../pictures/friends.JPG" alt="Your Digital Support">
             </div>
             <div class="col-md-6">
               <h3>Your Digital Support</h3>
@@ -203,7 +203,7 @@
         <section>
           <div class="row feature align-items-center">
             <div class="col-md-6 order-md-2">
-              <img src="/pictures/pexels-rpnickson-2609463.jpg" alt="Mindset Growth">
+              <img src="../pictures/pexels-rpnickson-2609463.JPG" alt="Mindset Growth">
             </div>
             <div class="col-md-6 order-md-1">
               <h3>Where Your Mindset Grows</h3>
@@ -219,7 +219,7 @@
         <section>
           <div class="row feature align-items-center">
             <div class="col-md-6">
-              <img src="/pictures/pexels-minan1398-853168.jpg" alt="Your Best Community">
+              <img src="../pictures/pexels-minan1398-853168.JPG" alt="Your Best Community">
             </div>
             <div class="col-md-6">
               <h3>Your Best Community</h3>
