--- a/officialpages/index.html
+++ b/officialpages/index.html
@@ -175,7 +175,7 @@
       </nav>
     </header>
     
-      <section class="text-center text-light py-5" style="background-image: url('/pictures/duy-pham-Cecb0_8Hx-o-unsplash.jpg'); background-size: cover; height: 80vh;">
+      <section class="text-center text-light py-5" style="background-image: url('../pictures/bgimage.JPG'); background-size: cover; height: 80vh;">
         <div class="container">
             <h2 class="display-4 pt-5 fw-semibold">Welcome to SafeSpace</h2>
             <p class="lead">1st Moroccan platform for mental well-being and support
