--- a/officialpages/about.html
+++ b/officialpages/about.html
@@ -143,7 +143,7 @@
     align-items: center;
   }
 
-  .carousel-control-prev-icon::after,
+  /*.carousel-control-prev-icon::after,
   .carousel-control-next-icon::after {
     content: '';
     display: inline-block;
@@ -151,7 +151,7 @@
     height: 10px;
     border: solid lightblue;
     border-width: 0 3px 3px 0;
-  }
+  }*/
 
   .carousel-control-prev-icon::after {
     transform: rotate(135deg); 
