--- a/officialpages/about.html
+++ b/officialpages/about.html
@@ -308,7 +308,7 @@
       </div>
     </div>
   
-    <!-- Carousel Controls -->
+    
     <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden custom-arrow">Previous</span>
@@ -319,13 +319,13 @@
     </button>
   </div>
   
-  <!-- Optional Indicators -->
+  
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#teamCarousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#teamCarousel" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#teamCarousel" data-bs-slide-to="2"></button>
   </div>
-  
+  <!--
     <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon custom-arrow" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -333,11 +333,9 @@
     <button class="carousel-control-next" type="button" data-bs-target="#teamCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon custom-arrow" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </button> -->
   </div>
   
-  
-
     <footer class="text-center text-light py-4">
       <div class="container">
           <ul class="list-unstyled d-flex justify-content-center mb-3">
