--- a/officialpages/about.html
+++ b/officialpages/about.html
@@ -244,7 +244,6 @@
   
   <div id="teamCarousel" class="carousel slide mx-5" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <!-- First Slide -->
       <div class="carousel-item active">
         <div class="container py-5">
           <div class="row align-items-center">
@@ -308,7 +307,7 @@
       </div>
     </div>
   
-    
+    <!--
     <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden custom-arrow">Previous</span>
@@ -316,7 +315,7 @@
     <button class="carousel-control-next" type="button" data-bs-target="#teamCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden custom-arrow">Next</span>
-    </button>
+    </button> -->
   </div>
   
   
