--- a/TherapistPart/settings.html
+++ b/TherapistPart/settings.html
@@ -6,7 +6,7 @@
   <title>Setting</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-  <link rel="icon" href="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png">
+  <link rel="icon" href="../pictures/icon.PNG">
   <style>
     .bg-primary{
       background-color:rgb(135, 206, 235) !important;
