--- a/studentPart/community.html
+++ b/studentPart/community.html
@@ -6,7 +6,7 @@
     <title>Safe Community Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="icon" href="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png">
+    <link rel="icon" href="../pictures/icon.PNG">
     <style>
         body {
             background: url('/pictures/dark\ img.jpg') no-repeat center center fixed;
