--- a/studentPart/profile.html
+++ b/studentPart/profile.html
@@ -6,7 +6,7 @@
     <title>Student Profile Settings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="icon" href="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png">
+    <link rel="icon" href="../pictures/icon.PNG">
     <style>
         body {
             background: url('https://source.unsplash.com/1600x900/?calm,dark') no-repeat center center fixed;
