--- a/officialpages/index.html
+++ b/officialpages/index.html
@@ -153,8 +153,8 @@
           <img src="../pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.PNG" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="https://alammarimalak.github.io/safespace/officialpages/about.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../officialpages/about.html"><i class="fas fa-solid fa-question"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../officialpages/index.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="https://alammarimalak.github.io/safespace/officialpages/about.html"><i class="fas fa-solid fa-question"></i></a>
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="../officialpages/service.html"><i class="fas fa-solid fa-briefcase"></i></a>
           <a class="nav-link ps-2 px-sm-2 px-xl-4" href="../officialpages/contact.html"><i class="fas fa-address-card"></i></a>
         </div>
