--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -6,7 +6,7 @@
     <title>Safe Space - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="icon" href="../pictures/icon.PNG">
+    <link rel="icon" href="../pictures/icon.png">
     <style>
       body {
         background-color: #f0f0eb;
@@ -127,7 +127,7 @@
   <body>
     <header>
       <nav class="navbar fixed-top px-4">
-        <img src="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+        <img src="../pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
   
         <div class="d-flex align-items-center mx-auto tt">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="/therapistPart/signedin_TH.html"><i class="fas fa-home"></i></a>
