--- a/officialpages/about.html
+++ b/officialpages/about.html
@@ -166,13 +166,13 @@
     <header>
       <nav class="navbar fixed-top">
         <a class="navbar-brand" href="index.html">
-          <img src="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+          <img src="../pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/index.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/about.html"><i class="fas fa-solid fa-question"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/service.html"><i class="fas fa-solid fa-briefcase"></i></a>
-          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="/officialpages/contact.html"><i class="fas fa-address-card"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../index.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./about.html"><i class="fas fa-solid fa-question"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./service.html"><i class="fas fa-solid fa-briefcase"></i></a>
+          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="./contact.html"><i class="fas fa-address-card"></i></a>
         </div>
         <div id="google_translate_element"></div>
         <button class="navbar-toggler ms-2" type="button" id="menuToggle">
@@ -181,17 +181,17 @@
         <div class="menu-overlay" id="menuOverlay">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/LOG/login.html"><i class="fas fa-user"></i>Log in</a>
+              <a class="nav-link" href="../LOG/login.html"><i class="fas fa-user"></i>Log in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/LOG/selection.html"><i class="fas fa-solid fa-right-to-bracket"></i>Sign Up</a>
+              <a class="nav-link" href="../LOG/selection.html"><i class="fas fa-solid fa-right-to-bracket"></i>Sign Up</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     
-      <section class="text-center text-light py-5" style="background-image: url('/pictures/duy-pham-Cecb0_8Hx-o-unsplash.jpg'); background-size: cover; height: 80vh;">
+      <section class="text-center text-light py-5" style="background-image: url('../pictures/bgimage.jpg'); background-size: cover; height: 80vh;">
         <div class="container">
             <h2 class="display-4 pt-5 fw-semibold">Welcome to SafeSpace</h2>
             <p class="lead">1st Moroccan platform for mental well-being and support
@@ -248,7 +248,7 @@
         <div class="container py-5">
           <div class="row align-items-center">
             <div class="col-lg-4 text-center mb-4 mb-lg-0">
-              <img src="/pictures/DSC_1959 copie.jpg" class="img-fluid rounded-circle" alt="Project Manager">
+              <img src="../pictures/DSC_1959 copie.jpg" class="img-fluid rounded-circle" alt="Project Manager">
             </div>
             <div class="col-lg-8 ps-lg-4">
               <h3 class="display-4 text-primary fw-bold">Rinad Tabji</h3>
