--- a/officialpages/service.html
+++ b/officialpages/service.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="icon" href="../pictures/icon.PNG">
+    <link rel="icon" href="../pictures/icon.png">
     <style>
       body, html {
         margin: 0;
@@ -153,13 +153,13 @@
     <header>
       <nav class="navbar fixed-top">
         <a class="navbar-brand" href="index.html">
-          <img src="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+          <img src="../pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/index.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/about.html"><i class="fas fa-solid fa-question"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/officialpages/service.html"><i class="fas fa-solid fa-briefcase"></i></a>
-          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="/officialpages/contact.html"><i class="fas fa-address-card"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../index.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./about.html"><i class="fas fa-solid fa-question"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./service.html"><i class="fas fa-solid fa-briefcase"></i></a>
+          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="./contact.html"><i class="fas fa-address-card"></i></a>
         </div>
         <div id="google_translate_element"></div>
         <button class="navbar-toggler ms-2" type="button" id="menuToggle">
@@ -178,7 +178,7 @@
       </nav>
     </header>
     
-      <section class="text-center text-light py-5" style="background-image: url('/pictures/duy-pham-Cecb0_8Hx-o-unsplash.jpg'); background-size: cover; height: 80vh;">
+      <section class="text-center text-light py-5" style="background-image: url('/pictures/bgimage.jpg'); background-size: cover; height: 80vh;">
         <div class="container">
             <h2 class="display-4 pt-5 fw-semibold">Welcome to SafeSpace</h2>
             <p class="lead">1st Moroccan platform for mental well-being and support
@@ -197,7 +197,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card shadow-sm bg-light rounded-3">
-              <img src="/pictures/thought-catalog-UK78i6vK3sc-unsplash.jpg" class="card-img-top rounded-top" alt="Online Pack Image">
+              <img src="../pictures/thought-catalog-UK78i6vK3sc-unsplash.jpg" class="card-img-top rounded-top" alt="Online Pack Image">
               <div class="card-body">
                 <h5 class="card-title text-center text-primary fw-bold">Online Pack - 499MAD/3months</h5>
                 <ul class="list-unstyled">
