--- a/TherapistPart/profile.html
+++ b/TherapistPart/profile.html
@@ -48,7 +48,7 @@
                 <a class="nav-link disabled" href="#preferences" data-bs-toggle="tab" style="color:rgb(135, 206, 235) !important ">
                   <i class="fas fa-cogs mx-2"></i>Preferences
                 </a>
-                <a href="/TherapistPart/signedin_TH.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
+                <a href="../TherapistPart/signedin_TH.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
                   <i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(135, 206, 235)!important "></i>Back</a>
 
               </nav>
@@ -66,7 +66,7 @@
                 <div class="card-body">
                   <div class="text-center mb-4">
                     <div class="position-relative d-inline-block">
-                      <img src="/pictures/th.jpg" class="rounded-circle" width="150px" height="120px" alt="Profile">
+                      <img src="../pictures/th.jpg" class="rounded-circle" width="150px" height="120px" alt="Profile">
                       <button class="btn btn-sm btn-secondary position-absolute bottom-0 end-0 rounded-circle" style="background-color: rgb(135, 206, 235) !important; border:none;">
                         <i class="fas fa-camera"></i>
                       </button>
