--- a/TherapistPart/report.html
+++ b/TherapistPart/report.html
@@ -23,7 +23,7 @@
 <div class="container mt-5">
 
   <div class="dashboard-container" style="animation: fadeIn 0.5s ease-in-out;">
-    <a href="/TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important"><i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(133, 133, 133) !important "></i>Back</a>
+    <a href="../TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important"><i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(133, 133, 133) !important "></i>Back</a>
     <div class="card card-custom mb-4">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center">
