--- a/TherapistPart/settings.html
+++ b/TherapistPart/settings.html
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="#integrations" data-bs-toggle="tab" style="color:rgb(135, 206, 235) !important">
                       <i class="fas fa-plug mx-2"></i>Integrations
                     </a>
-                    <a href="/TherapistPart/signedin_TH.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
+                    <a href="../TherapistPart/signedin_TH.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
                   <i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(135, 206, 235)!important "></i>Back</a>
                   </nav>
                 </div>
