--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -130,37 +130,37 @@
         <img src="../pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
   
         <div class="d-flex align-items-center mx-auto tt">
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/therapistPart/signedin_TH.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/therapistPart/student_list.html"><i class="fas fa-user-friends"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/therapistPart/report.html"><i class="fas fa-clipboard-check"></i></a>
-          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="/therapistPart/schedule.html"><i class="fas fa-calendar-alt"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/signedin_TH.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/student_list.html"><i class="fas fa-user-friends"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/report.html"><i class="fas fa-clipboard-check"></i></a>
+          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="../therapistPart/schedule.html"><i class="fas fa-calendar-alt"></i></a>
         </div>
   
-        <a class="nav-link px-2 px-sm-2 px-xl-4 disabled" href="/therapistPart/resources.html"><i class="fas fa-book-medical"></i></a>
-        <a class="nav-link px-2 px-sm-2 px-xl-4" href="/therapistPart/message.html"><i class="fas fa-envelope"></i></a>
+        <a class="nav-link px-2 px-sm-2 px-xl-4 disabled" href="#"><i class="fas fa-book-medical"></i></a>
+        <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/message.html"><i class="fas fa-envelope"></i></a>
         <button class="navbar-toggler ms-2" type="button" id="menuToggle">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="menu-overlay" id="menuOverlay">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/therapistPart/profile.html"
+              <a class="nav-link" href="../therapistPart/profile.html"
                 ><i class="fas fa-user-md"></i>Therapist Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/therapistPart/report.html"
+              <a class="nav-link" href="../therapistPart/report.html"
                 ><i class="fas fa-chart-line"></i>Patient Reports</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/therapistPart/settings.html"
+              <a class="nav-link" href="../therapistPart/settings.html"
                 ><i class="fas fa-cogs"></i>Practice Settings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/therapistPart/feedback.html"
+              <a class="nav-link" href="../therapistPart/feedback.html"
                 ><i class="fas fa-comment-medical"></i>Client Feedback</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/officialpages/index.html"
+              <a class="nav-link" href="../index.html"
                 ><i class="fas fa-sign-out-alt"></i>Log Out</a>
             </li>
           </ul>
@@ -185,7 +185,7 @@
                 <p class="small text-muted">
                   * Real-time updates and progress tracking
                 </p>
-                <a href="/therapistPart/student_list.html" class="btn btn-primary btn-md mt-2">
+                <a href="../therapistPart/student_list.html" class="btn btn-primary btn-md mt-2">
                   View Patients <i class="fas fa-notes-medical ms-2"></i>
                 </a>
               </div>
@@ -205,7 +205,7 @@
                 <p class="small text-muted">
                   * Integrated video conferencing available
                 </p>
-                <a href="/therapistPart/schedule.html" class="btn btn-light btn-md mt-2 text-white">
+                <a href="../therapistPart/schedule.html" class="btn btn-light btn-md mt-2 text-white">
                   View Schedule <i class="fas fa-video ms-2"></i>
                 </a>
               </div>
@@ -225,7 +225,7 @@
                 <p class="small text-muted">
                   * Automated trend analysis available
                 </p>
-                <a href="/therapistPart/report.html" class="btn btn-warning btn-md mt-2">
+                <a href="../therapistPart/report.html" class="btn btn-warning btn-md mt-2">
                   View Reports <i class="fas fa-chart-bar ms-2"></i>
                 </a>
               </div>
