--- a/TherapistPart/student_list.html
+++ b/TherapistPart/student_list.html
@@ -74,11 +74,11 @@
             <div class="col-md-3 col-lg-2 sidebar p-3">
                 <h4 class="mb-4">Clinic Portal</h4>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="/TherapistPart/student_list.html"><i class="fas fa-user-friends me-2"></i> Patients</a>
-                    <a class="nav-link" href="/TherapistPart/schedule.html"><i class="fas fa-calendar-alt me-2"></i> Appointments</a>
-                    <a class="nav-link" href="/TherapistPart/report.html"><i class="fas fa-file-medical me-2"></i> Reports</a>
+                    <a class="nav-link active" href="../TherapistPart/student_list.html"><i class="fas fa-user-friends me-2"></i> Patients</a>
+                    <a class="nav-link" href="../TherapistPart/schedule.html"><i class="fas fa-calendar-alt me-2"></i> Appointments</a>
+                    <a class="nav-link" href="../TherapistPart/report.html"><i class="fas fa-file-medical me-2"></i> Reports</a>
                     <a class="nav-link" href="#"><i class="fas fa-cog me-2 disabled"></i> Settings</a>
-                    <a href="/TherapistPart/signedin_TH.html" alt="back" class="nav-link ps-3"><i class="fa-solid fa-arrow-left me-2"></i>Back</a>
+                    <a href="../TherapistPart/signedin_TH.html" alt="back" class="nav-link ps-3"><i class="fa-solid fa-arrow-left me-2"></i>Back</a>
                 </nav>
             </div>
 
@@ -114,7 +114,7 @@
                             <tr class="hover-effect">
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <img src="/pictures/pexels-danxavier-1239288.jpg" class="patient-avatar me-3" alt="Patient">
+                                        <img src="../pictures/pexels-danxavier-1239288.jpg" class="patient-avatar me-3" alt="Patient">
                                         <div>
                                             <div class="fw-bold">Rinad Tabji</div>
                                             <div class="text-muted">12th grade</div>
@@ -144,7 +144,7 @@
                             <tr class="hover-effect">
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <img src="/pictures/Screenshot__586_-removebg-preview.png" class="patient-avatar me-3" alt="Patient">
+                                        <img src="../pictures/Screenshot__586_-removebg-preview.png" class="patient-avatar me-3" alt="Patient">
                                         <div>
                                             <div class="fw-bold">Malak Al ammari</div>
                                             <div class="text-muted">10th grade</div>
