--- a/officialpages/about.html
+++ b/officialpages/about.html
@@ -143,7 +143,7 @@
     align-items: center;
   }
 
-  /*.carousel-control-prev-icon::after,
+  .carousel-control-prev-icon::after,
   .carousel-control-next-icon::after {
     content: '';
     display: inline-block;
@@ -151,7 +151,7 @@
     height: 10px;
     border: solid lightblue;
     border-width: 0 3px 3px 0;
-  }*/
+  }
 
   .carousel-control-prev-icon::after {
     transform: rotate(135deg); 
@@ -269,7 +269,7 @@
         <div class="container py-5">
           <div class="row align-items-center">
             <div class="col-lg-4 text-center mb-4 mb-lg-0">
-              <img src="/pictures/PHOTO-2025-02-14-00-01-37-removebg-preview.png" class="img-fluid rounded-circle" alt="Vice-Project Manager">
+              <img src="../pictures/PHOTO-2025-02-14-00-01-37-removebg-preview.png" class="img-fluid rounded-circle" alt="Vice-Project Manager">
             </div>
             <div class="col-lg-8 ps-lg-4">
               <h3 class="display-4 text-primary fw-bold">Jannat Lotfi</h3>
@@ -290,7 +290,7 @@
         <div class="container py-5">
           <div class="row align-items-center">
             <div class="col-lg-4 text-center mb-4 mb-lg-0">
-              <img src="/pictures/Screenshot__586_-removebg-preview.png" class="img-fluid rounded-circle" alt="Front-End Developer">
+              <img src="../pictures/Screenshot__586_-removebg-preview.png" class="img-fluid rounded-circle" alt="Front-End Developer">
             </div>
             <div class="col-lg-8 ps-lg-4">
               <h3 class="display-4 text-primary fw-bold">Malak Al ammari</h3>
@@ -307,15 +307,15 @@
       </div>
     </div>
   
-    <!--
+    
     <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden custom-arrow">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#teamCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden custom-arrow">Next</span>
-    </button> -->
+      <span class="visually-hidden custom-arrow bg-primary">Next</span>
+    </button> 
   </div>
   
   
