--- a/officialpages/collab.html
+++ b/officialpages/collab.html
@@ -173,7 +173,7 @@
 </style>
 </head>
 <body>
-    <a href="/officialpages/service.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="./service.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="form-container">
         <h1>SafeSpace School Partnership Registration</h1>
         <h3>Kenitra Mental Health Collaboration Initiative</h3>
