--- a/officialpages/payment.html
+++ b/officialpages/payment.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <a href="/officialpages/service.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="./service.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container">
         <div class="payment-container p-4 bg-white rounded-3 shadow">
             <h2 class="mb-4 text-center">Payment Information</h2>
