--- a/studentPart/diarySpace.html
+++ b/studentPart/diarySpace.html
@@ -55,7 +55,7 @@
 <body>
   <div class="container">
     <div class="header-buttons">
-        <a href='/studentPart/signed_in.html' class="text-decoration-none text-white ps-1"><i class="fas fa-arrow-left text-muted"></i></a>
+        <a href='../studentPart/signed_in.html' class="text-decoration-none text-white ps-1"><i class="fas fa-arrow-left text-muted"></i></a>
       <div>
         <button class="btn btn-success me-2" onclick="saveDiary()">
           <i class="fas fa-save"></i> Save
