--- a/studentPart/display.html
+++ b/studentPart/display.html
@@ -77,7 +77,7 @@
                     <a class="nav-link disabled" href="#motion" data-bs-toggle="tab" style="color:rgb(135, 206, 235) !important;">
                       <i class="fas fa-running mx-2"></i>Motion
                     </a>
-                    <a href="/studentPart/signed_in.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
+                    <a href="../studentPart/signed_in.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
                       <i class="fa-solid fa-arrow-left me-2 mb-3" style="color:rgb(135, 206, 235)!important "></i>Back</a>
                   </nav>
                 </div>
