--- a/studentPart/message.html
+++ b/studentPart/message.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-    <a href="/studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container mt-4">
         <h3 class="text-center">Chat with your therapist!</h3>
         <div class="chat-box d-flex flex-column">
