--- a/studentPart/profile.html
+++ b/studentPart/profile.html
@@ -58,11 +58,11 @@
     </style>
 </head>
 <body>
-    <a href="/studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="profile-container mb-3">
         <h4 class="text-center">Profile Settings</h4>
         <div class="text-center">
-            <img src="/pictures/pexels-danxavier-1239288.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="../pictures/pexels-danxavier-1239288.jpg" alt="Profile Picture" class="profile-pic">
             <input type="file" class="form-control mt-2 mb-2" accept="image/*">
         </div>
         <form>
