--- a/studentPart/settings.html
+++ b/studentPart/settings.html
@@ -44,7 +44,7 @@
                     <a class="nav-link disabled" href="#data" data-bs-toggle="tab" style="color:rgb(135, 206, 235) !important;">
                       <i class="fas fa-database mx-2"></i>Data
                     </a>
-                    <a href="/studentPart/signed_in.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
+                    <a href="../studentPart/signed_in.html" alt="back" class=" nav-link text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important">
                       <i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(135, 206, 235)!important "></i>Back</a>
                   </nav>
                 </div>
@@ -68,7 +68,7 @@
                           <div class="col-md-6">
                             <label class="form-label">Profile Picture</label>
                             <div class="d-flex align-items-center">
-                              <img src="/pictures/pexels-danxavier-1239288.jpg" class="rounded-circle me-3" width="60" alt="Avatar">
+                              <img src="../pictures/pexels-danxavier-1239288.jpg" class="rounded-circle me-3" width="60" alt="Avatar">
                               <input type="file" class="form-control" accept="image/*">
                             </div>
                           </div>
