--- a/studentPart/signed_in.html
+++ b/studentPart/signed_in.html
@@ -131,40 +131,40 @@
   <body>
     <header>
       <nav class="navbar fixed-top px-4" style="border-bottom: style=rgb(100, 197, 235) !important;">
-        <img src="/pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+        <img src="../pictures/f5aa8c92-3bb6-404c-93c4-508b2d91f934-removebg-preview.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
 
         <div class="d-flex align-items-center mx-auto tt">
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/studentPart/signed_in.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/studentPart/SafeTest/SafeTest.html"><i class="fas fa-flask"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="/studentPart/diarySpace.html"><i class="fas fa-book"></i></a>
-          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="/studentPart/checkUp.html"><i class="fas fa-stethoscope"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../studentPart/signed_in.html"><i class="fas fa-home"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../studentPart/SafeTest/SafeTest.html"><i class="fas fa-flask"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../studentPart/diarySpace.html"><i class="fas fa-book"></i></a>
+          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="../studentPart/checkUp.html"><i class="fas fa-stethoscope"></i></a>
         </div>
 
-        <a class="nav-link px-2 px-sm-2 px-xl-4" href="/studentPart/community.html"><i class="fas fa-users"></i></a>
-        <a class="nav-link px-2 px-sm-2 px-xl-4" href="/studentPart/message.html"><i class="fas fa-envelope"></i></a>
+        <a class="nav-link px-2 px-sm-2 px-xl-4" href="../studentPart/community.html"><i class="fas fa-users"></i></a>
+        <a class="nav-link px-2 px-sm-2 px-xl-4" href="../studentPart/message.html"><i class="fas fa-envelope"></i></a>
         <button class="navbar-toggler ms-2" type="button" id="menuToggle">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="menu-overlay" id="menuOverlay">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/studentPart/profile.html"
+              <a class="nav-link" href="../studentPart/profile.html"
                 ><i class="fas fa-user"></i>Your Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/studentPart/settings.html"
+              <a class="nav-link" href="../studentPart/settings.html"
                 ><i class="fas fa-cogs"></i>Settings & Privacy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/studentPart/display.html"
+              <a class="nav-link" href="../studentPart/display.html"
                 ><i class="fas fa-moon"></i>Display & Accessibility</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/studentPart/feedback.html"
+              <a class="nav-link" href="../studentPart/feedback.html"
                 ><i class="fas fa-comment-dots"></i>Give Feedback</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/officialpages/index.html"
+              <a class="nav-link" href="../index.html"
                 ><i class="fas fa-sign-out-alt"></i>Log Out</a>
             </li>
           </ul>
@@ -190,7 +190,7 @@
                 <p class="small text-muted">
                   * Confidential and results are instantly available.
                 </p>
-                <a href="/studentPart/SafeTest/SafeTest.html" class="btn btn-primary btn-md mt-2">
+                <a href="../studentPart/SafeTest/SafeTest.html" class="btn btn-primary btn-md mt-2">
                   Start Test <i class="fas fa-arrow-right ms-2"></i>
                 </a>
               </div>
@@ -210,7 +210,7 @@
                 <p class="small text-muted">
                   * Secure and customizable with mood tags.
                 </p>
-                <a href="/studentPart/diarySpace.html" class="btn btn-light btn-md mt-2 text-white" >
+                <a href="../studentPart/diarySpace.html" class="btn btn-light btn-md mt-2 text-white" >
                   Start Writing <i class="fas fa-pen-alt ms-2"></i>
                 </a>
               </div>
@@ -230,7 +230,7 @@
                 <p class="small text-muted">
                   * Secure and safe conversations.
                 </p>
-                <a href="message.html" class="btn btn-warning btn-md mt-2">
+                <a href="../studentPart/message.html" class="btn btn-warning btn-md mt-2">
                   View Messages <i class="fas fa-arrow-right ms-2"></i>
                 </a>
               </div>
@@ -276,7 +276,7 @@
                 <div class="progress mb-3" style="height: 20px;">
                   <div class="progress-bar bg-success" role="progressbar" style="width: 75%">75% Positive</div>
                 </div>
-                <a href="/studentPart/checkUp.html" class="btn btn-outline-primary text-light btn-md" style="background-color:#ff6b6b !important; border:none;">
+                <a href="../studentPart/checkUp.html" class="btn btn-outline-primary text-light btn-md" style="background-color:#ff6b6b !important; border:none;">
                   Add Entry <i class="fas fa-plus ms-2"></i>
                 </a>
               </div>
@@ -291,13 +291,13 @@
                 <h5 class="card-title mb-4"><i class="fas fa-bolt me-2"></i>Quick Actions</h5>
                 <div class="row g-3">
                   <div class="col-6 col-md-3">
-                    <a href="/studentPart/diarySpace.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
+                    <a href="../studentPart/diarySpace.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
                       <i class="fas fa-book-open fa-2x mb-2"></i><br>
                       New Journal Entry
                     </a>
                   </div>
                   <div class="col-6 col-md-3">
-                    <a href="/studentPart/SafeTest/SafeTest.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
+                    <a href="../studentPart/SafeTest/SafeTest.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
                       <i class="fas fa-brain fa-2x mb-2"></i><br>
                       Quick Test
                     </a>
@@ -309,7 +309,7 @@
                     </a>
                   </div>
                   <div class="col-6 col-md-3">
-                    <a href="/studentPart/community.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
+                    <a href="../studentPart/community.html" class="btn btn-light w-100 py-3" style="background-color: rgb(135, 206, 235) !important; border:none;">
                       <i class="fas fa-users fa-2x mb-2"></i><br>
                       Community
                     </a>
