--- a/TherapistPart/feedback.html
+++ b/TherapistPart/feedback.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <a href="/TherapistPart/signedin_TH.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../TherapistPart/signedin_TH.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
