--- a/TherapistPart/message.html
+++ b/TherapistPart/message.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="container-fluid session-container mt-3">
-        <a href="/TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important"><i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(135, 206, 235) !important "></i>Back</a>
+        <a href="../TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none ms-2" style="color:rgb(135, 206, 235) !important"><i class="fa-solid fa-arrow-left mx-2 mb-3" style="color:rgb(135, 206, 235) !important "></i>Back</a>
         <div class="row">
             <div class="col-md-8 p-4">
                 <div class="d-flex justify-content-between align-items-center mb-3">
