--- a/TherapistPart/schedule.html
+++ b/TherapistPart/schedule.html
@@ -51,7 +51,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
             <div class="container-fluid">
-                <a href="/TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none" style="color:rgb(135, 206, 235) !important "><i class="fa-solid fa-arrow-left me-2"></i>Back</a>
+                <a href="../TherapistPart/signedin_TH.html" alt="back" class="text-decoration-none" style="color:rgb(135, 206, 235) !important "><i class="fa-solid fa-arrow-left me-2"></i>Back</a>
                 <a class="navbar-brand fw-bold" href="#" style="cursor: auto;">SafeSched</a>
                 <div class="d-flex align-items-center">
                     <button class="btn btn-sm btn-outline-secondary me-2" id="todayBtn">Today</button>
