--- a/officialpages/contact.html
+++ b/officialpages/contact.html
@@ -127,8 +127,8 @@
   <body>
     <header>
       <nav class="navbar fixed-top">
-        <a class="navbar-brand" href="index.html">
-          <img src="/pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
+        <a class="navbar-brand" href="../index.html">
+          <img src="../pictures/icon.png" alt="logo" width="35px" id="logo" class="link" style="padding-left: 5px;" />
         </a>
         <div class="d-flex align-items-center mx-auto">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="../index.html"><i class="fas fa-home"></i></a>
@@ -143,17 +143,17 @@
         <div class="menu-overlay" id="menuOverlay">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/LOG/login.html"><i class="fas fa-user"></i>Log in</a>
+              <a class="nav-link" href="../LOG/login.html"><i class="fas fa-user"></i>Log in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/LOG/selection.html"><i class="fas fa-solid fa-right-to-bracket"></i>Sign Up</a>
+              <a class="nav-link" href="../LOG/selection.html"><i class="fas fa-solid fa-right-to-bracket"></i>Sign Up</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     
-      <section class="text-center text-light py-5" style="background-image: url('/pictures/bgimage.jpg'); background-size: cover; height: 80vh;">
+      <section class="text-center text-light py-5" style="background-image: url('../pictures/bgimage.jpg'); background-size: cover; height: 80vh;">
         <div class="container">
             <h2 class="display-4 pt-5 fw-semibold">Welcome to SafeSpace</h2>
             <p class="lead">1st Moroccan platform for mental well-being and support
