--- a/studentPart/SafeTest/SafeTest.html
+++ b/studentPart/SafeTest/SafeTest.html
@@ -161,7 +161,7 @@
     <div class="container">
         <!-- Header Buttons -->
         <div class="header-buttons">
-            <a href="/studentPart/signed_in.html" class="text-decoration-none text-white ps-1"><i class="fas fa-arrow-left text-muted"></i></a>
+            <a href="../signed_in.html" class="text-decoration-none text-white ps-1"><i class="fas fa-arrow-left text-muted"></i></a>
           <div>
             <button class="btn btn-success me-2" onclick="saveDiary()">
               <i class="fas fa-check-circle"></i> Submit
