--- a/studentPart/checkUp.html
+++ b/studentPart/checkUp.html
@@ -6,14 +6,14 @@
     <title>Daily Student Check-Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-    <link rel="icon" href="./pictures/icon.PNG">
+    <link rel="icon" href="../pictures/icon.PNG">
     <style>
         body {
             background-color: #f8f9fa;
             animation: fadeIn 0.5s ease-in-out;
         }
 
-        .container{.
+        .container{
             animation: fadeIn 0.5s ease-in-out;
         }
         @keyframes fadeIn{
@@ -77,7 +77,7 @@
         }
     </style>
 </head>
-<a href="/studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+<a href="../studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
 <body class="mt-5 pt-5">
     <div class="container" id="page1">
         <h3>How are you feeling right now?</h3>
