--- a/studentPart/community.html
+++ b/studentPart/community.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../pictures/icon.PNG">
     <style>
         body {
-            background: url('/pictures/dark\ img.jpg') no-repeat center center fixed;
+            background: url('../pictures/dark\ img.jpg') no-repeat center center fixed;
             background-size: cover;
         }
         .chat-container {
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-    <a href="/studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="chat-container my-2 pt-3">
         <h4 class="text-center">SafeChat</h4>
         <div class="chat-box" id="chatBox">
