--- a/studentPart/feedback.html
+++ b/studentPart/feedback.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <a href="/studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../studentPart/signed_in.html" alt="back"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
