--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -131,7 +131,7 @@
   
         <div class="d-flex align-items-center mx-auto tt">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/signedin_TH.html"><i class="fas fa-home"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/student_list.html"><i class="fas fa-user-friends"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./student_list.html"><i class="fas fa-user-friends"></i></a>
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/report.html"><i class="fas fa-clipboard-check"></i></a>
           <a class="nav-link ps-2 px-sm-2 px-xl-4" href="../therapistPart/schedule.html"><i class="fas fa-calendar-alt"></i></a>
         </div>
