fixed linked in header

--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -132,31 +132,31 @@
         <div class="d-flex align-items-center mx-auto tt">
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/signedin_TH.html"><i class="fas fa-home"></i></a>
           <a class="nav-link px-2 px-sm-2 px-xl-4" href="./student_list.html"><i class="fas fa-user-friends"></i></a>
-          <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/report.html"><i class="fas fa-clipboard-check"></i></a>
-          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="../therapistPart/schedule.html"><i class="fas fa-calendar-alt"></i></a>
+          <a class="nav-link px-2 px-sm-2 px-xl-4" href="./report.html"><i class="fas fa-clipboard-check"></i></a>
+          <a class="nav-link ps-2 px-sm-2 px-xl-4" href="./schedule.html"><i class="fas fa-calendar-alt"></i></a>
         </div>
   
         <a class="nav-link px-2 px-sm-2 px-xl-4 disabled" href="#"><i class="fas fa-book-medical"></i></a>
-        <a class="nav-link px-2 px-sm-2 px-xl-4" href="../therapistPart/message.html"><i class="fas fa-envelope"></i></a>
+        <a class="nav-link px-2 px-sm-2 px-xl-4" href="./message.html"><i class="fas fa-envelope"></i></a>
         <button class="navbar-toggler ms-2" type="button" id="menuToggle">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="menu-overlay" id="menuOverlay">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../therapistPart/profile.html"
+              <a class="nav-link" href="./profile.html"
                 ><i class="fas fa-user-md"></i>Therapist Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../therapistPart/report.html"
+              <a class="nav-link" href="./report.html"
                 ><i class="fas fa-chart-line"></i>Patient Reports</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../therapistPart/settings.html"
+              <a class="nav-link" href="./settings.html"
                 ><i class="fas fa-cogs"></i>Practice Settings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../therapistPart/feedback.html"
+              <a class="nav-link" href="./feedback.html"
                 ><i class="fas fa-comment-medical"></i>Client Feedback</a>
             </li>
             <li class="nav-item">
