fixed linked containers

--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -185,7 +185,7 @@
                 <p class="small text-muted">
                   * Real-time updates and progress tracking
                 </p>
-                <a href="../therapistPart/student_list.html" class="btn btn-primary btn-md mt-2">
+                <a href="./student_list.html" class="btn btn-primary btn-md mt-2">
                   View Patients <i class="fas fa-notes-medical ms-2"></i>
                 </a>
               </div>
@@ -205,7 +205,7 @@
                 <p class="small text-muted">
                   * Integrated video conferencing available
                 </p>
-                <a href="../therapistPart/schedule.html" class="btn btn-light btn-md mt-2 text-white">
+                <a href="./schedule.html" class="btn btn-light btn-md mt-2 text-white">
                   View Schedule <i class="fas fa-video ms-2"></i>
                 </a>
               </div>
