--- a/TherapistPart/signedin_TH.html
+++ b/TherapistPart/signedin_TH.html
@@ -225,7 +225,7 @@
                 <p class="small text-muted">
                   * Automated trend analysis available
                 </p>
-                <a href="../therapistPart/report.html" class="btn btn-warning btn-md mt-2">
+                <a href="./report.html" class="btn btn-warning btn-md mt-2">
                   View Reports <i class="fas fa-chart-bar ms-2"></i>
                 </a>
               </div>
