--- a/officialpages/service.html
+++ b/officialpages/service.html
@@ -199,7 +199,7 @@
             <div class="card shadow-sm bg-light rounded-3">
               <img src="../pictures/thought-catalog-UK78i6vK3sc-unsplash.jpg" class="card-img-top rounded-top" alt="Online Pack Image">
               <div class="card-body">
-                <h5 class="card-title text-center text-primary fw-bold">Online Pack - 499MAD/3months</h5>
+                <h5 class="card-title text-center text-primary fw-bold">Online Pack - 1699MAD/3months</h5>
                 <ul class="list-unstyled">
                   <li>+Access to online therapy sessions</li>
                   <li>+monthly mental health quizzes</li>
@@ -218,7 +218,7 @@
             <div class="card shadow-sm bg-light rounded-3">
               <img src="../pictures/young-people-getting-their-kite-up.jpg" class="card-img-top rounded-top" alt="Full Pack Image">
               <div class="card-body">
-                <h5 class="card-title text-center text-primary fw-bold">Full Pack - 899MAD/3months</h5>
+                <h5 class="card-title text-center text-primary fw-bold">Full Pack - 3400MAD/3months</h5>
                 <ul class="list-unstyled">
                   <li>+All benefits of Online and On-Site Packs</li>
                   <li>+Full access to forums and group activities</li>
@@ -236,7 +236,7 @@
             <div class="card shadow-sm bg-light rounded-3">
               <img src="../pictures/chang-duong-KrfID_ZQxWs-unsplash.jpg" class="card-img-top rounded-top" alt="On-Site Pack Image">
               <div class="card-body">
-                <h5 class="card-title text-center text-primary fw-bold">On-Site Pack - 499MAD/3months</h5>
+                <h5 class="card-title text-center text-primary fw-bold">On-Site Pack - 999MAD/month</h5>
                 <ul class="list-unstyled">
                   <li>+In-person therapy sessions</li>
                   <li>+Personalized mental health plans</li>
@@ -260,6 +260,7 @@
           </div>
           <div class="col-md-6">
             <h3>SafeSpace x Schools: A Collaborative Effort</h3>
+            <h5 class="card-title text-primary fw-bold">499dhs/mois</h5>
             <p class="text-muted">
               At SafeSpace, we believe in the power of collaboration. By partnering with schools, 
               we aim to provide students with the support they need to thrive emotionally and academically. 
